[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tictactoe"
doctest = false

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
test-bpf = []

[dependencies]
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
shank = "0.0.10"
solana-program = "1.14.5"
thiserror = "1.0.37"
